fix resposnive layout bugs

--- a/css/style.css
+++ b/css/style.css
@@ -204,7 +204,18 @@ nav ul li a:hover::after {
   background: #f1f1f1;
 }
 
-
+@media (max-width:400px) {
+ .Hero_Section{
+   padding: 40px 10px;
+ height: 30vh;
+ }
+ .input_box {
+  padding: 10px 10px;
+}
+.input_box i{
+  margin: 0 2px;
+}
+}
 /* ========================================
             ---Root_Section--
 ======================================== */
@@ -310,7 +321,6 @@ margin-bottom: 10px;
   overflow-x: hidden;
   padding: 0;
   display: grid;
-  gap: 10px;
   grid-template-columns: repeat(2,1fr);
  }
  .hrading{
@@ -324,18 +334,34 @@ margin-bottom: 10px;
   font-size: 14px;
  }
  .Book_card{
-  width: 95%;
+  margin: 5px;
+  margin-bottom: 10px;
+  width: 93%;
+  height: 250px;
   object-fit: cover;
  }
+ .Book_card img{
+  height: 40%;
+ }
  .Book_card h3{
-  font-size: 18px;
+  font-size: 16px;
+  padding: 5px;
+ margin: 0;
   color: var(--Light_black);
  }
  .Book_card p{
-  font-size: 15px;
+  margin: 0;
+  font-size: 12px;
+ }
+ .rating_box{
+  margin: 0;
+  display: flex;
+  align-items: center;
+  font-size: 12px;
  }
  .card_btn{
   left: 10px;
+  height: 30px;
  }
 }
 
@@ -591,6 +617,22 @@ margin-bottom: 10px;
     margin-bottom: 4vh;
   }
 }
+
+ @media (max-width: 4980px) {
+  .Categories-Section{
+  padding: 20px 10px;
+    height: 25vh;
+  }
+  .btn_group{
+    width: 100%;
+    height: 10vh;
+    align-items: center;
+    padding-top: 5px;
+  }
+  .btn_group button{
+    height: 80%;
+  }
+ }
 
 
   
